# community_resource_platform

./: Cargo.toml
migrations/: 20250101163518_create_users_table.sql  20250101163551_create_resources_table.sql
src/: config.rs  db.rs  main.rs
src/handlers/: auth.rs  resource.rs
src/middleware/: auth.rs
src/models/: resource.rs  user.rs
src/routes/: mod.rs  resource_routes.rs  user_routes.rs
